force-app/main/default/objects/Payment_Request__c/Payment_Request__c.object-meta.xml
<CustomObject>
    <description>Used to manage payment requests for approval, typically for promotional and/or exceptional payments.</description>
    <label>Payment Request</label>
    <nameField>
        <label>Payment Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>