force-app/main/default/objects/Payment_Request__c/fields/Amount_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Amount_Dollars__c</fullName>
    <description>The dollar amount for the payment request.</description>
    <inlineHelpText>The dollar amount for the payment request.</inlineHelpText>
    <label>Amount (Dollars)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>