force-app/main/default/objects/Payment_Request__c/fields/Amount_Points__c.field-meta.xml
<CustomField>
    <fullName>Amount_Points__c</fullName>
    <description>The point amount for the payment request.</description>
    <inlineHelpText>The point amount for the payment request.</inlineHelpText>
    <label>Amount (Points)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>