force-app/main/default/objects/Payment_Request__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an approval is required for this payment request. Set by automation, and triggers other automation to initiate an approval process.</description>
    <inlineHelpText>Indicates if an approval is required for this payment request.</inlineHelpText>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>