force-app/main/default/objects/Payment_Request__c/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <description>The Campaign Member to which the Payment Request relates. NOTE: Campaign Members do not allow lookup relationships currently in Salesforce, so this is a text field.</description>
    <inlineHelpText>The Campaign Member to which the Payment Request relates.</inlineHelpText>
    <label>Campaign Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>