force-app/main/default/objects/Payment_Request__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Donor to whom this request relates.</description>
    <inlineHelpText>The Donor to whom this request relates.</inlineHelpText>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>