force-app/main/default/objects/Payment_Request__c/fields/Donor_Last_Used_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Last_Used_Center_Name__c</fullName>
    <description>Shows the last used center for this donor; indicates where an approval process would be routed (if applicable).</description>
    <formula>Donor__r.Last_Used_Center__r.Name</formula>
    <inlineHelpText>Shows the last used center for this donor; indicates where an approval process would be routed (if applicable).</inlineHelpText>
    <label>Donor Last Used Center (Name)</label>
    <type>Text</type>
</CustomField>