force-app/main/default/objects/Payment_Request__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <description>The content of the Message body, for mobile notification, limited to 255 characters.</description>
    <inlineHelpText>The content of the Message body, for mobile notification, limited to 255 characters.</inlineHelpText>
    <label>Message Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>