force-app/main/default/objects/Payment_Request__c/fields/Message_Subject__c.field-meta.xml
<CustomField>
    <fullName>Message_Subject__c</fullName>
    <description>The content of the Message subject, for mobile notification, limited to 80 characters.</description>
    <inlineHelpText>The content of the Message subject, for mobile notification, limited to 80 characters.</inlineHelpText>
    <label>Message Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>