force-app/main/default/objects/Payment_Request__c/fields/Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Description__c</fullName>
    <description>A short reason / description to print on the Transaction Line Item.</description>
    <inlineHelpText>A short reason / description to print on the Transaction Line Item.</inlineHelpText>
    <label>Reason / Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>