force-app/main/default/objects/Payment_Request__c/fields/Transaction_Result__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The resulting transaction created by this payment request.</description>
    <inlineHelpText>The resulting transaction created by this payment request.</inlineHelpText>
    <label>Transaction (Result)</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>