force-app/main/default/objects/Payment_Request__c/listViews/Center_Manager_Dallas_Payment_Request.listView-meta.xml
<ListView>
    <fullName>Center_Manager_Dallas_Payment_Request</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>Amount_Dollars__c</columns>
    <columns>Amount_Points__c</columns>
    <columns>Status__c</columns>
    <columns>Visit__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Submitted</value>
    </filters>
    <label>Center Manager Dallas Approval Queue</label>
    <queue>Center_Manager_Dallas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>