force-app/main/default/objects/Payment_Request__c/listViews/Center_Manager_Miramar_Payment_Request.listView-meta.xml
<ListView>
    <fullName>Center_Manager_Miramar_Payment_Request</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>Amount_Dollars__c</columns>
    <columns>Amount_Points__c</columns>
    <columns>Status__c</columns>
    <columns>Visit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Submitted</value>
    </filters>
    <filters>
        <field>Donor_Last_Used_Center_Name__c</field>
        <operation>equals</operation>
        <value>Proesis Miramar</value>
    </filters>
    <filters>
        <field>Approval_Required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Center Manager Miramar Approval Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>