force-app/main/default/objects/Payment_Request__c/listViews/Proesis_Operations_Payment_Request.listView-meta.xml
<ListView>
    <fullName>Proesis_Operations_Payment_Request</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>Donor_Last_Used_Center_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Amount_Dollars__c</columns>
    <columns>Amount_Points__c</columns>
    <columns>Status__c</columns>
    <columns>Visit__c</columns>
    <filterScope>Queue</filterScope>
    <label>Proesis Operations (All)</label>
    <queue>Proesis_Operations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>